# swagstract

./: Cargo.toml  LICENSE  readme.md
examples/: petstore.yaml
src/: components.rs  main.rs  operations.rs  output.rs  refs.rs  spec.rs
