[package]
name = "swagstract"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/lgmys/swagstract"
authors = ["lgmys <lgmys@pm.me>"]
license = "MIT"
description = "A tool to extract a subset of OpenAPI 3.* spec from yaml files"

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.17", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
